tests/algorithms/transpiler/FS/graphs/dijkstra.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/dijkstra.fs(78,48): error FS0001: This expression was expected to have type
    string    
but here has type
    KeyValuePair<string,int>    

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/dijkstra.fs(80,63): error FS0001: The type 'IDictionary<string,int>' does not support a conversion to the type 'int'

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/dijkstra.fs(80,65): error FS0001: This expression was expected to have type
    string    
but here has type
    char    

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/dijkstra.fs(81,62): error FS0001: This expression was expected to have type
    string    
but here has type
    KeyValuePair<string,int>    

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/dijkstra.fs(127,49): error FS0001: This expression was expected to have type
    string    
but here has type
    KeyValuePair<string,int>    

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/dijkstra.fs(129,65): error FS0001: The type 'IDictionary<string,int>' does not support a conversion to the type 'int'

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/dijkstra.fs(129,68): error FS0001: This expression was expected to have type
    string    
but here has type
    char    

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/dijkstra.fs(130,64): error FS0001: This expression was expected to have type
    string    
but here has type
    KeyValuePair<string,int>    

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/dijkstra.fs(176,49): error FS0001: This expression was expected to have type
    string    
but here has type
    KeyValuePair<string,int>    

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/dijkstra.fs(178,65): error FS0001: The type 'IDictionary<string,int>' does not support a conversion to the type 'int'

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/dijkstra.fs(178,68): error FS0001: This expression was expected to have type
    string    
but here has type
    char    

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/dijkstra.fs(179,64): error FS0001: This expression was expected to have type
    string    
but here has type
    KeyValuePair<string,int>    
